syntax = "proto3";

package shop.v1;

option go_package = ".;v1";

import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";

service OrderManagerService{
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse){
    option(google.api.http) = {
      get: "/v1/orders"
    };
  }
}

message GetOrderResponse{
  string id = 1;
  repeated string items = 2;
  string description = 3;
  float price = 4;
  string destination = 5;
}


message GetOrderRequest{
  string id = 1;
}


